# sam-instant-messenger

./: .gitignore  Cargo.toml  README.md
.github/actions/setup/: action.yml
.github/workflows/: rust.yml  setup.yml
.sqlx/: query-120cfd7be1ac10b3ba7519b6288920b0f677eb92fa26e0b19c96806e8f29464a.json  query-17a424d34e0e56d9f316e127cdc64fa10ee9406c04e22780db76121d4a3d6269.json  query-18b05dc69cdf88cf82f11aede796c9c0e3623a3ffb99917f40b21031d4ae3b2e.json  query-1b64754d66abbc566e4db219bf1afcb371363192dcef551420e8d2d195588685.json  query-1c5a150e737a3683d301e7c8041b084a52124e236499a8e92ff726d53dab52cd.json  query-2ddbf27d5c0286fdf39efb259caa10bd88c1ea12be17e659bb9c60086d33a7d9.json  query-324ac3e78232bc92d82d6ea75b119f2d5fb0c5d1dd963545dd63bf751828e5df.json  query-378c370d31abfbf9f75513fe6913bed7c962e09f91b646936f6688854eb714ad.json  query-3dab301a572c8efd299caf3145ecbf70a47914276f2ee05c4b89ee0e337f002a.json  query-46f9ea62ceb594805fa3291e9e6bfefa3adac06bfb7b90ea0f2fcd794849f4d0.json  query-488cf5bb6fe44340d9499f91c019d8fba39849407497abf93579957cb47eeeb0.json  query-5c30a8232a47eb1b46aee2be7c2eea5a2501543ac4ab18a5b48a3adec56c1247.json  query-61e09c0274cd24359014def47313229daeb2cd0f8e7e1658e089e9e50b8d1846.json  query-6fcb0dcfa3b4c695ea0b26895f9fdf8baa0c40ec9b7d05772ab059a671051357.json  query-7b2cd8f058b1c6f41cbe6c1efa10eabc748a9e795db75dbb8c77d4aff86a9e1d.json  query-7e9cdbaf67097c36eab7aadb7dc2c6bb82353de152019550be00b5e5bd56919f.json  query-878c1e63d2d21c14457914146811bc5a61c6754a0fbd930fa34c9f8553032a35.json  query-8deaf8eb5a8bc830f2c26eb03a51821a4f46743668afcd93f4aa370e3f059283.json  query-9640770a9323e54f22726d1f65a8ddf6e466406b13a8d337cdca17515b947da8.json  query-a3274bf7d82b22b2424c694c154e6df4bc37fdbf3052cf340660248d246f26f4.json  query-b073d1d50dce96c03621c564ee6d636645f78417060a4f64d333cc1099a180aa.json  query-b2e7d0d366dbd299a6db0ac145d7cd1289c5fdee91bf2f578e1b98eb33fc1314.json  query-bb45af3d7e022a5f0b00d96a3dac22f63fea28dc344957427531d10bae547b57.json  query-bc32402899e06a2b77fe870fefb6724a05be62fd27a3f16b820e139e2805b705.json  query-d082c6dcde4bb0b8c03e0cf24c05d7a4d6e2698a016431e14c787a63541473b8.json  query-e83f235cf5bc57edffea0128d3bdcbfd0bc27273f092b7f762016c04528a2437.json  query-f139ac93d4e9487640c17fc8f9c6f1b83635fcac894fe8cea2d75755e6e58790.json  query-f3b8187882c71092bf24fb5ffa6ed09f96ca98514a31adeb81e7e6e9ac514d7e.json  query-f4d692b4dd1efae9437a65bd170fa040dfc38fed1828615b3aa477ab750e6588.json
client/: Cargo.toml
client/database/: dev.db
client/database/migrations/: 20250204091337_client.sql
client/src/: client.rs  error.rs  keygen.rs  lib.rs  register.rs  time.rs
client/src/net/: api_trait.rs  error.rs  http_client.rs  mod.rs
client/src/storage/: error.rs  mod.rs  sqlite.rs
client/src/storage/inmem/: account.rs  contact.rs  kyber.rs  mod.rs  pre_key.rs  signed_pre_key.rs
client/src/storage/sqlite/: account.rs  contact.rs  identity.rs  kyber.rs  mod.rs  pre_key.rs  sender_key.rs  session.rs  signed_pre_key.rs
client/src/storage/tests/: account.rs  identity.rs  kyber.rs  mod.rs  pre_key.rs  session.rs  signed_pre_key.rs
client/src/storage/traits/: account.rs  contact.rs  mod.rs
client/tests/conformance/: account.rs  identity.rs  kyber.rs  mod.rs  pre_key.rs  session.rs  signed_pre_key.rs
common/: Cargo.toml  build.rs
common/proto/: Envelope.proto
common/src/: address.rs  envelope.rs  error.rs  lib.rs  proto.rs  time.rs
common/src/api/: account.rs  authorization.rs  device.rs  keys.rs  mod.rs
e2e/: Cargo.toml
e2e/tests/: register_client.rs
e2e/tests/utils/: mod.rs  server.rs
server/: Cargo.toml
server/src/: error.rs  lib.rs  main.rs  message_cache.rs  redis_cache.rs  server.rs  state.rs  test_utils.rs
server/src/auth/: authenticate.rs  authenticated_device.rs  authenticated_user.rs  device.rs  keys.rs  mod.rs  password.rs
server/src/logic/: account.rs  device.rs  keys.rs  message.rs  mod.rs  test_utils.rs  websocket.rs
server/src/managers/: mod.rs
server/src/managers/entities/: account.rs  device.rs
server/src/managers/in_memory/: account.rs  device.rs  keys.rs  message.rs  mod.rs  test_utils.rs
server/src/managers/traits/: account_manager.rs  device_manager.rs  key_manager.rs  message_manager.rs  mod.rs
server/src/routes/: account.rs  device.rs  keys.rs  mod.rs  router.rs  test_utils.rs  websocket.rs
server/src/state/: account.rs  device.rs  mod.rs  state.rs  state_type.rs
server/src/state/traits/: account_manager.rs  device_manager.rs  key_manager.rs  message_manager.rs  mod.rs  state_type.rs
server/src/storage/: account.rs  device.rs  error.rs  mod.rs  traits.rs
server/src/storage/inmem/: account.rs  device.rs  key.rs  message.rs
server/src/storage/postgres/: account.rs  device.rs  key.rs  message.rs  mod.rs
server/src/test_utils/: cache.rs  mod.rs  user.rs
