[package]
name = "sam-client"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "2.0.1", features = ["display", "error", "from"] }
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", version = "0.1.0" }
libsignal-core = { git = "https://github.com/signalapp/libsignal.git", version = "0.1.0" }
sam-common = { path = "../common" }
async-trait = "0.1.86"
uuid = { version = "1.13.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
base64 = "0.22.1"
bon = "3.3.2"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
rand = "0.9.0"
