[package]
name = "sam-common"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "2.0.1", features = ["display", "error", "from"] }
bon = "3.3.2"
prost = "0.13.4"
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", version = "0.1.0" }
uuid = { version = "1.13.1", features = ["v4"] }


[build-dependencies]
prost-build = "0.13.4"
