[package]
name = "sam-common"
version = "0.1.0"
edition = "2021"

[dependencies]
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", version = "0.1.0" }
derive_more = { version = "1.0.0", features = ["display", "error", "from"] }
tokio = { version = "1.40.0", features = ["full"] }
futures-util = { version = "0.3.30", features = ["sink"] }
async-trait = "0.1.83"
prost = "0.13.3"
base64 = "0.22.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_with = { version = "3.11.0", features = ["base64"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
bon = "3.3.2"
rand = "0.8.5"

[build-dependencies]
prost-build = "0.13.4"
