[package]
name = "sam-server"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_more = { version = "2.0.1", features = ["display", "error", "from"] }
sam-common = { path = "../common" }
async-trait = "0.1.86"
uuid = { version = "1.13.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "macros"] }
bon = "3.3.2"
