[package]
name = "sam-server"
version = "0.1.0"
edition = "2021"

[dependencies]
utoipa = { version = "5.3.1", features = ["axum_extras", "debug"] }
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", version = "0.1.0" }
derive_more = { version = "2.0.1", features = ["display", "error", "from"] }
sam-common = { path = "../common" }
tokio = { version = "1.40.0", features = ["full"] }
futures-util = { version = "0.3.30", features = ["sink"] }
async-trait = "0.1.83"
prost = "0.13.3"
axum = { version = "0.7.6", features = ["ws", "macros"] }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
env_logger = "0.11.6"
log = "0.4.25"
bon = "3.3.2"
hkdf = "0.12.4"
sha2 = "0.10"
hex = "0.4.3"
rand = "0.8.5"
base64 = "0.21.7"
argon2 = "0.5.3"
rustls = { version = "0.23.15", features = ["ring"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
utoipa-axum = "0.2.0"

